# Computer-Vision

./: .gitignore  README.md  app.py  pyproject.toml
downstream_inference/: keys.json  settings.py
eval/: filename_mapping.json  ground_truth.json  results.json  run_eval.py
src/: engine.py
src/image_rag_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
