[project]
name = "image-rag-system"
version = "0.1.0"
description = "Hệ thống Truy vấn Ảnh đa phương thức (CBIR + RAG)"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "open-clip-torch>=2.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.uv]
package = false
